# SPDX-License-Identifier: GPL-2.0-or-later
# SPDX-FileCopyrightText: 2017-2021 Bartosz Golaszewski <bartekgola@gmail.com>
# SPDX-FileCopyrightText: 2022 Bartosz Golaszewski <bartosz.golaszewski@linaro.org>

SUBDIRS = .

if WITH_BINDINGS_CXX

SUBDIRS += cxx

endif

if WITH_BINDINGS_PYTHON

SUBDIRS += python

endif

if WITH_BINDINGS_RUST

SUBDIRS += rust

endif

if WITH_BINDINGS_GLIB

SUBDIRS += glib

endif
