# SPDX-License-Identifier: GPL-2.0-or-later
# SPDX-FileCopyrightText: 2026 Qualcomm Technologies, Inc. and/or its subsidiaries

if opt_bindings_cxx.allowed()
  subdir('cxx')
endif

if glib_enabled
  subdir('glib')
endif

if opt_bindings_python.allowed()
  subdir('python')
endif

if rust_enabled
  subdir('rust')
endif
