#
# Copyright (C) 2017 Bartosz Golaszewski <bartekgola@gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 3 as
# published by the Free Software Foundation.
#

if WITH_TOOLS

TOOLS_SUBDIR = tools

endif

SUBDIRS = . lib $(TOOLS_SUBDIR)
